# protected_YOLO_v3

./: .gitignore  CMakeLists.txt  a  bad.list  bitflip  bitflip.sh  cmp_file_v4.c  timing_exp.sh
Aux_constructor/: CMakeLists.txt  cutlass_mmm.cu  cutlass_mmm.h
Aux_constructor/MMM_protected/: CMakeLists.txt  MMM_protected.cu  MMM_protected.h
bdd100k_images_10k/: val - Shortcut.lnk
cutlass/: CMakeLists.txt
cutlass/examples/: CMakeLists.txt
cutlass/examples/41_Sim_test/: Simt_18.cu
cutlass/include/cutlass/arch/: memory.h
cutlass/include/cutlass/epilogue/threadblock/: epilogue.h
cutlass/include/cutlass/gemm/device/: gemm.h
cutlass/include/cutlass/gemm/kernel/: gemm.h
cutlass/include/cutlass/gemm/thread/: mma_sm50.h
cutlass/include/cutlass/gemm/threadblock/: mma_pipelined.h
cutlass/include/cutlass/gemm/warp/: mma_simt.h
include/: darknet.h
results/YOLO-v3-tiny/timing/O3/CNN/: 00_TECH_NO_ED_timing.csv  01_TECH_XOR_EXTERNAL_timing.csv  02_TECH_XOR_INTERMEDIATE_timing.csv  03_TECH_XOR_INTERNAL_timing.csv  04_TECH_ONES_EXTERNAL_timing.csv  05_TECH_ONES_INTERMEDIATE_timing.csv  06_TECH_ONES_INTERNAL_timing.csv  07_TECH_TWOS_EXTERNAL_timing.csv  08_TECH_TWOS_INTERMEDIATE_timing.csv  09_TECH_TWOS_INTERNAL_timing.csv  10_TECH_FLETCHER_EXTERNAL_timing.csv  11_TECH_FLETCHER_INTERMEDIATE_timing.csv  12_TECH_FLETCHER_INTERNAL_timing.csv  13_TECH_CRC_EXTERNAL_timing.csv  14_TECH_CRC_INTERMEDIATE_timing.csv  15_TECH_CRC_INTERNAL_timing.csv  16_TECH_XOR_FLET_timing.csv  17_TECH_XOR_CRC_timing.csv  18_TECH_ONES_FLET_timing.csv  19_TECH_ONES_CRC_timing.csv  20_TECH_TWOS_FLET_timing.csv  21_TECH_TWOS_CRC_timing.csv  22_TECH_FLET_CRC_timing.csv  SUMMARY.csv
results/YOLO-v3-tiny/timing/O3/Whole_YOLO/: 00_TECH_NO_ED_timing.csv  01_TECH_XOR_EXTERNAL_timing.csv  02_TECH_XOR_INTERMEDIATE_timing.csv  03_TECH_XOR_INTERNAL_timing.csv  04_TECH_ONES_EXTERNAL_timing.csv  05_TECH_ONES_INTERMEDIATE_timing.csv  06_TECH_ONES_INTERNAL_timing.csv  07_TECH_TWOS_EXTERNAL_timing.csv  08_TECH_TWOS_INTERMEDIATE_timing.csv  09_TECH_TWOS_INTERNAL_timing.csv  10_TECH_FLETCHER_EXTERNAL_timing.csv  11_TECH_FLETCHER_INTERMEDIATE_timing.csv  12_TECH_FLETCHER_INTERNAL_timing.csv  13_TECH_CRC_EXTERNAL_timing.csv  14_TECH_CRC_INTERMEDIATE_timing.csv  15_TECH_CRC_INTERNAL_timing.csv  16_TECH_XOR_FLET_timing.csv  17_TECH_XOR_CRC_timing.csv  18_TECH_ONES_FLET_timing.csv  19_TECH_ONES_CRC_timing.csv  20_TECH_TWOS_FLET_timing.csv  21_TECH_TWOS_CRC_timing.csv  22_TECH_FLET_CRC_timing.csv  summary_convergence.sh.csv
src/: convolutional_kernels.cu  detector.c  gemm.c  gemm.cpp  gemm.h  network.c  network_kernels.cu  parser.c
testing_utilities/: Untitled 1.odt  cmp_file  cmp_file_v2.c  cmp_file_v3.c  cmp_file_v4.c  cmp_files.c  summarising.sh
testing_utilities/0_activationweight/: cmp_file
testing_utilities/Adding_library/: Makefile  MathFunctions.h  cmake_install.cmake  exe  main.c  my_sqrt.c
testing_utilities/Adding_library/new_folder/: MathFunctions_2.h  my_sqrt_2.c
